--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@next/font": "13.1.0",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
+    "cookie": "^0.5.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
     "next": "13.1.0",
+    "next-auth": "^4.18.8",
     "qs": "^6.11.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-spring": "^9.6.1",
+    "react-use-gesture": "^9.1.3",
+    "swr": "^2.0.0"
   }
 }
