Fixed login flow and login screen

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 SPOTIFY_CLIENT_ID=19471fa4ae2345f6938568096c26bd53
 SPOTIFY_CLIENT_SECRET=0eff7cf1b3a349cfbafef3a444a34304
+NEXTAUTH_URL=http://localhost:3000/
+NEXTAUTH_SECRET=af017d04a8083251abdebb81b1fbb492
