--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie": "^0.5.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
+    "framer-motion": "^9.0.4",
     "next": "13.1.0",
     "next-auth": "^4.18.8",
     "qs": "^6.11.0",
